--- a/BookingHotel/Views/Shared/_Layout.cshtml
+++ b/BookingHotel/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
-            <a class="nav-link navbar-brand" asp-area="" asp-controller="Region" asp-action="Index">Booking Hotel</a>
+            <a class="nav-link navbar-brand" asp-area="" asp-controller="Region" asp-action="Index">
+                <img src="/images/Logo.jpg" alt="Alternate Text" style="height: 50px; width: 150px;"/>
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,12 +33,7 @@
                         <a class="nav-link text-white" href="#">Liên hệ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="ShoppingCart" asp-action="Index">
-                            <span class="fa fa-shopping-cart"></span> 
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Booking" asp-action="History">Ls đặt</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Booking" asp-action="HistoryBooking">Ls đặt</a>
                     </li>
                 </ul>
                 @* <form class="form-inline my-2 my-lg-0">
